--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laudantium, quae a non dignissimos, eligendi quibusdam molestiae delectus ipsum ad commodi sit voluptatum quis vel, sint obcaecati nulla dicta fugiat?</p>
+    <h1>Curso de Prework en Windows WSL</h1>
+    <p>My primer push</p>
     
 </body>
 </html>
